force-app/main/default/objects/Droid_Components__c/Droid_Components__c.object-meta.xml
<CustomObject>
    <label>Droid Component</label>
    <nameField>
        <label>Droid Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Droid Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>