force-app/main/default/objects/Droid_Components__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locomotion Unit</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
            <value>
                <fullName>Power Source</fullName>
            </value>
            <value>
                <fullName>Limb</fullName>
            </value>
            <value>
                <fullName>CPU and Processors</fullName>
            </value>
            <value>
                <fullName>Armor</fullName>
            </value>
            <value>
                <fullName>Weapons Accessories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>