force-app/main/default/objects/Droid_Components__c/fields/Part_Count__c.field-meta.xml
<CustomField>
    <fullName>Part_Count__c</fullName>
    <label>Part Count</label>
    <summaryForeignKey>Parts_to_Components_Junc__c.Droid_Components__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>