force-app/main/default/objects/Droid_Components__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>This keeps track of the cost of this number of components</description>
    <inlineHelpText>Please enter how much this number of components cost.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>